--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,8 @@ jobs:
         echo "env_string=${ENV_VARS}" >> $GITHUB_ENV
 
     # Step 6: Deploy to Azure Container Instances
+    - name: Debug ENV_FILE_CONTENT
+      run: echo "${{ secrets.ENV_FILE_CONTENT }}"
     - name: Debug Parsed Environment Variables
       run: |
         echo "Parsed ENV String:"
