--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,56 +34,37 @@ jobs:
         docker build . -t ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
         docker push ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
 
-    # Step 6: Deploy to Azure Container Instances
-    - name: Debug ENV_FILE_CONTENT
-      run: echo "${{ secrets.ENV_FILE_CONTENT }}"
-
-    - name: Debug TEST_ENV_FILE_CONTENT
-      run: echo "${{ secrets.TEST_ENV_FILE_CONTENT }}"
-      
-    # Step 5: Parse and format environment variables
-    - name: Format environment variables for Azure
-      id: parse_env
+    # Step 5: Generate secure-env.yaml
+    - name: Generate secure-env.yaml
       run: |
-        if [ -z "${{ secrets.ENV_FILE_CONTENT }}" ]; then
-          echo "env_string=" >> $GITHUB_ENV
-          exit 0
-        fi
-    
-        # Convert the ENV_FILE_CONTENT into properly formatted variables
-        echo -e "${{ secrets.ENV_FILE_CONTENT }}" > temp_env_file
-    
-        ENV_VARS=""
-        while IFS='=' read -r key value; do
-          if [[ $key =~ ^[a-zA-Z_][a-zA-Z0-9_]*$ ]]; then
-            ENV_VARS+="$key=$value "
-          else
-            echo "Invalid environment variable name: $key"
-            exit 1
-          fi
-        done < temp_env_file
-    
-        echo "env_string=${ENV_VARS}" >> $GITHUB_ENV
-        rm temp_env_file
-
-      
-    - name: Debug Parsed Environment Variables
-      run: |
-        echo "Parsed ENV String:"
-        echo "${{ steps.parse_env.outputs.env_string }}"
-        
-    - name: Deploy to Azure Container Instances
-      uses: azure/aci-deploy@v1
-      with:
-        resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-        dns-name-label: uvicorn-backend-${{ github.run_id }}
-        image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
-        registry-username: ${{ secrets.ACR_USERNAME }}
-        registry-password: ${{ secrets.ACR_PASSWORD }}
-        name: uvicorn-backend
+        echo "apiVersion: 2019-12-01
         location: eastus
-        cpu: 4
-        memory: 8
-        ports: 8000
-        ip-address: Public
-        environment-variables: ${{ steps.parse_env.outputs.env_string }}
+        name: uvicorn-backend
+        properties:
+          containers:
+          - name: uvicorn-backend
+            properties:
+              environmentVariables:" > secure-env.yaml
+
+        echo "${{ secrets.ENV_FILE_CONTENT }}" | while IFS='=' read -r key value; do
+          echo "              - name: '$key'" >> secure-env.yaml
+          echo "                secureValue: '$value'" >> secure-env.yaml
+        done
+
+        echo "              image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
+              ports:
+              - port: 8000
+              resources:
+                requests:
+                  cpu: 4.0
+                  memoryInGB: 8.0
+        osType: Linux
+        restartPolicy: Always
+        type: Microsoft.ContainerInstance/containerGroups" >> secure-env.yaml
+
+    # Step 6: Deploy using secure-env.yaml
+    - name: Deploy to Azure Container Instances
+      run: |
+        az container create \
+          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+          --file secure-env.yaml
