--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,13 @@ jobs:
           - name: uvicorn-backend
             properties:
               environmentVariables:" > secure-env.yaml
-
-        echo "${{ secrets.ENV_FILE_CONTENT }}" | while IFS='=' read -r key value; do
-          echo "              - name: '$key'" >> secure-env.yaml
-          echo "                secureValue: '$value'" >> secure-env.yaml
-        done
-
-        echo "              image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
+        
+                echo "${{ secrets.ENV_FILE_CONTENT }}" | while IFS='=' read -r key value; do
+                  echo "      - name: \"$key\"" >> secure-env.yaml
+                  echo "        secureValue: \"$value\"" >> secure-env.yaml
+                done
+        
+                echo "      image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
               ports:
               - port: 8000
               resources:
@@ -62,6 +62,7 @@ jobs:
         restartPolicy: Always
         type: Microsoft.ContainerInstance/containerGroups" >> secure-env.yaml
 
+        cat secure-env.yaml
     # Step 6: Deploy using secure-env.yaml
     - name: Deploy to Azure Container Instances
       run: |
