--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
     # Step 1: Check out the repository
     - name: Checkout GitHub Action
-      uses: actions/checkout@master
-
+      uses: actions/checkout@v3
+      
     # Step 2: Log in to Azure
     - name: Login via Azure CLI
       uses: azure/login@v2
@@ -28,42 +28,29 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
 
-    # Step 4: Build and Push the Docker Image
+    # Step 4: Build and push the Docker image
     - name: Build and Push Docker Image
       run: |
         docker build . -t ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
         docker push ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
 
-    # Step 5: Generate secure-env.yaml
-    - name: Generate secure-env.yaml
-      run: |
-        echo "apiVersion: 2019-12-01
-        location: eastus
-        name: uvicorn-backend
-        properties:
-          osType: Linux
-          restartPolicy: Always
-          containers:
-          - name: uvicorn-backend
-            properties:
-              image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
-              resources:
-                requests:
-                  cpu: 4.0
-                  memoryInGB: 8.0
-              ports:
-              - port: 8000
-              environmentVariables:" > secure-env.yaml
-        
-                echo "${{ secrets.ENV_FILE_CONTENT }}" | while IFS='=' read -r key value; do
-                  echo "      - name: \"$key\"" >> secure-env.yaml
-                  echo "        secureValue: \"$value\"" >> secure-env.yaml
-                done
-        
-                cat secure-env.yaml
-    # Step 6: Deploy using secure-env.yaml
+    # Step 5: Deploy to Azure Container Instances
     - name: Deploy to Azure Container Instances
-      run: |
-        az container create \
-          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-          --file secure-env.yaml
+      uses: azure/aci-deploy@v1
+      with:
+        resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
+        dns-name-label: uvicorn-backend-${{ github.run_id }}
+        image: ${{ secrets.ACR_LOGIN_SERVER }}/uvicorn-backend:${{ github.sha }}
+        registry-username: ${{ secrets.ACR_USERNAME }}
+        registry-password: ${{ secrets.ACR_PASSWORD }}
+        name: uvicorn-backend
+        location: 'eastus'
+        cpu: 4
+        memory: 8
+        ports: 8000
+        ip-address: Public
+        secure-environment-variables: |
+          KEY1=${{ secrets.KEY1 }}
+          KEY2=${{ secrets.KEY2 }}
+          KEY3=${{ secrets.KEY3 }}
+          
